--- a/Template/templatedialog.ui
+++ b/Template/templatedialog.ui
@@ -25,6 +25,39 @@
    <bool>false</bool>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
+   <item row="3" column="0">
+    <widget class="ScaleGraphicsView" name="graphicsView"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>ROI</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="Pb_DrawROI">
+        <property name="text">
+         <string>Draw ROI</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="Pb_Move">
+        <property name="text">
+         <string>Move Scene</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="Pb_Choose">
+        <property name="text">
+         <string>Select Item</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="maximumSize">
@@ -64,40 +97,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>ROI</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
-       <widget class="QPushButton" name="Pb_DrawROI">
-        <property name="text">
-         <string>Draw ROI</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="Pb_Move">
-        <property name="text">
-         <string>Move Scene</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="Pb_Choose">
-        <property name="text">
-         <string>Select Item</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="ScaleGraphicsView" name="graphicsView"/>
-   </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QFrame" name="frame">
      <property name="maximumSize">
       <size>
@@ -129,6 +129,22 @@
        <widget class="QPushButton" name="Pb_OK">
         <property name="text">
          <string>OK</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>Operation</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_5">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="Pb_GetROIImage">
+        <property name="text">
+         <string>Get ROI Image</string>
         </property>
        </widget>
       </item>
